[package]
repository = "https://github.com/TW0hank0/positive_tool_rs"
name = "positive_tool_rs"
version = "0.7.0"
edition = "2024"
description = "`positive_tool_rs`一個rust的工具"
license = "AGPL-3.0-only"

[lib]
crate-type = ["rlib"]

[dependencies]
log = { version = "0.4.28" }
log4rs = { version = "1.4.0", features = ["file_appender", "console_appender"] }
colored = { version = "3.0.0" }
time = { version = "0.3.44", features = ["formatting"], optional = true }


[features]
tool_time = ["dep:time"]
default = []
